# downscaling_intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  visual_extraction_tuning_pipeline.py
llava/: conversation.py  mm_utils.py
llava/eval/: evaluate_interleave.py  model_vqa.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_qwen.py  llava_qwen_3.py
llava/train/: llava_trainer.py  train.py  train_mem.py
lmms_eval_custom_files/: qwen3.py
lmms_eval_custom_files/mmstar/: mmstar_prism_stage_1.yaml  mmstar_prism_stage_2.yaml  question_specific_info_qwen3_8B.json  stage_1_utils.py  stage_2_utils.py
