[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.7.0.dev0"

dependencies = [
    "llava[standalone]",
    "numpy==1.26.1",
    "open_clip_torch",
    "fastapi==0.116.1",
    "markdown2[all]==2.5.4",
    "requests==2.32.4",
    "sentencepiece==0.1.99",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "uvicorn==0.35.0",
    "wandb==0.21.1",
    "deepspeed==0.14.4",
    "peft==0.4.0",
    "accelerate==1.10.0",
    "tokenizers==0.21.4",
    "transformers==4.53.0",
    "bitsandbytes==0.45.1",
    "scikit-learn==1.2.2",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "gradio_client==0.2.9",
    "urllib3==1.26.20",
    "datasets==2.16.1",
    "pydantic==1.10.8",
    "timm==1.0.19",
    "hf_transfer==0.1.9",
    "opencv-python==4.11.0.86",
    "av==15.0.0",
    "decord==0.6.0",
    "tyro==0.9.27",
    "scipy==1.15.3",
    "pytablewriter==1.2.1",
    "sacrebleu==2.5.1",
    "openai==1.99.9",
    "loguru==0.7.3",
    "evaluate==0.4.5",
    "sqlitedict==2.1.0",
    "tenacity==8.3.0",
]

[tool.setuptools.packages.find]
include = ["llava*", "trl*"]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]
